# metaBayes

./: .gitignore  Cargo.toml
example/: metamix_out_mcmc_trace.tsv  metamix_out_posterior_samples.tsv  metamix_out_read_assignments.tsv  metamix_out_results.tsv
src/: main.rs  step1_parser.rs  step2_reduce.rs  step3_mcmc.rs  step4_inference.rs
